# cxx_matrix

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cmake_clean.sh  p0009r1.html  p0009r3.html  p0009r4.html  p0332r0.html  span.h  test_span.cpp  test_vandermonde.cpp
Stroustrup/: MatrixIO_orig.h
choro/: .gitignore  choro  test_choro.cpp  vec.h  vec2_math.h  vec3_math.h  vec_io.h  vec_math.h
cxx_matrix_math/: CMakeLists.txt  cholesky_fail.txt  test_matrix.cpp  test_matrix.txt  test_vandermonde.cpp  test_vandermonde.txt
cxx_matrix_math/include/bits/: quadrature_point.h
cxx_matrix_math/include/ext/: matrix.h  matrix_cholesky_decomp.h  matrix_cholesky_decomp.tcc  matrix_gauss_jordan.h  matrix_gauss_jordan.tcc  matrix_lu_decomp.h  matrix_lu_decomp.tcc  matrix_sv_decomp.h  matrix_sv_decomp.tcc  matrix_tridiag.h  matrix_tridiag.tcc  matrix_util.h  matrix_vandermonde.h  matrix_vandermonde.tcc
cxx_matrix_math/output/: test_matrix.txt
cxx_quaternion/: .gitignore  CMakeLists.txt  test_quaternion.cpp
cxx_quaternion/include/ext/: quaternion.h  quaternion.tcc
cxx_quaternion/output/: test_quaternion.txt
cxx_span/: .gitignore  CMakeLists.txt  Makefile  span  span.h  span_compile_neg.cpp  span_x  test_array_ref.cpp  test_span.cpp  test_span_h.cpp
cxx_span/include/: span
docs/papers/: P0009R7: <code>mdspan<_code>: A Non-Owning Multidimensional Array Reference.html  P0009r6 : mdspan: A Non-Owning Multidimensional Array Reference.html  P0546r2 : Span - foundation for the future.html  [linear.algebra]R2: A proposal to add linear algebra support to the C++ standard library.html  p0331r0.html  p0332r1.html  p0546r0.html  p0546r1.html  p0900r0: An Ontology for Properties of <code>mdspan<_code>.html  p1085r0.md  p1085r1.md
matrix_math/: .gitignore  Makefile  matrix.h  matrix_cholesky_decomp.tcc  matrix_gauss_jordan.tcc  matrix_lu_decomp.h  matrix_lu_decomp.tcc  matrix_qr_decomp.h  matrix_qr_decomp.tcc  matrix_sv_decomp.h  matrix_sv_decomp.tcc  matrix_tridiag.tcc  matrix_util.h  matrix_vandermonde.tcc  test_matrix.cpp  test_matrix.txt  test_vandermonde.txt
netlib/mv/: mv.shar
netlib/mv/mv/: README  makefile  makefile.def
netlib/mv/mv/include/: mv_blas1.h  mv_blas1_complex.h  mv_blas1_double.h  mv_blas1_float.h  mv_blas1_int.h  mv_blas1_type.h  mv_matrix.h  mv_matrix_all.h  mv_matrix_complex.h  mv_matrix_double.h  mv_matrix_float.h  mv_matrix_int.h  (+14 more)
papers/: P0009R8: <code>mdspan<_code>: A Non-Owning Multidimensional Array Reference.html  P0009R9: <code>mdspan<_code>: A Non-Owning Multidimensional Array Reference.html  P0860r0 : Atomic Access Property for span and mdspan.html  p0009r2.html  p0856r0: Restrict Access Property for <code>mdspan<_code> and <code>span<_code>.html  p0860R1: Atomic Access Property for mdspan.html  p1085r2.md
quaternion/: Makefile  quaternion.h  test_quaternion  test_quaternion.cpp
swizzle/: help.txt  swizzle.h  swizzle.hpp  test_swizzle.cpp
vec_mat/: vec.h
(+42 files in other folders)
